Fix #883 Collections list is flickering while collectors are running

--- a/src/main/resources/assets/style/main.sass
+++ b/src/main/resources/assets/style/main.sass
@@ -49,6 +49,9 @@ th.disabled
 // .bls-n
 // 	border-left-style: none
 
+.br-table
+	border-radius: .28571429rem
+
 // .brs-n
 // 	border-right-style: none
 
@@ -65,6 +68,15 @@ th.disabled
 .c-lgr
 	color: lightgray
 
+.filt-b-5-g-0-7
+	filter: blur(5px) grayscale(.7)
+
+.h-100p
+	height: 100%
+
+.l-0
+	left: 0
+
 .l-50p
 	left: 50%
 
@@ -72,12 +84,21 @@ th.disabled
 .mt-1rem
 	margin-top: $padding-vertical-default
 
+.p-a
+	position: absolute
+
 .ui.search.p-f,
 .p-f
 	position: fixed
 
+.p-r
+	position: relative
+
 .pt-1rem
 	padding-top: $padding-vertical-default
+
+.t-0
+	top: 0
 
 .t-3
 	top: 3
@@ -97,3 +118,9 @@ th.disabled
 
 .cl-b
 	clear: both
+
+.w-100p
+	width: 100%
+
+.zi-1
+	z-index: 1
